# lcd

./: .gitignore  Cargo.toml  README.md
data/: libercantiones.json
src/: args.rs  data_loader.rs  display.rs  formatter.rs  main.rs  search.rs
