[package]
name = "lcd"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.26"       # For terminal interaction
tui = "0.19"
strsim = "0.10" # fuzzy search
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"